hphp/test/zend/good/Zend/tests/errmsg_001.php.expectf

Fatal error: Non-abstract method Impl::Foo must contain body in %s/errmsg_001.php on line 7
